schema/testdata/errors/operation_set_expression_unresolvable_rhs.keel
model Profile {
    fields {
        username Text @unique
    }

    actions {
        create createProfile() {
            //expect-error:37:53:AttributeExpressionError:undeclared reference to 'context' (in container '')
            @set(profile.username = context.identity)
        }
    }
}
